...

        <Typography
          variant="h2"
          color={style.accent}
          style={{ textAlign: "center", fontSize: 20 * contentScale }}
        >
          {data.productName || "Nome do produto"}
        </Typography>

        {data.note?.trim() ? (
          <Typography
            variant="caption"
            color={style.accent}
...
